# Assignment

./: .gitattributes  .gitignore  Aise_AICoach_CaseStudy_v1.pptx  Aise_AICoach_CaseStudy_v2.pptx  BhagavadGitaDaily_Strategy_Divyaman.pptx  BhagavadGitaDaily_Strategy_v2.pptx  BhagavadGitaDaily_Strategy_v3.pptx  BhagavadGitaDaily_Strategy_v4.pptx  BhagavadGitaDaily_Strategy_v5.pptx  BhagavadGitaDaily_Strategy_v6.pptx  BhagavadGitaDaily_Strategy_v7.pptx  CDISC_NorthIndia_GTM_Outreach.pptx  END_TO_END_USER_FLOW.md  README.md  Strategic_Addendum_Notes.md  VidyaSetu_Final_SahAI2026.docx
DataLake3Auth_Final_Submission_2026-06-04/: README.md
SiteID_Secure_Construction_Identity_Submission/: README.md
Urban Air Hack/: .env.example  .gitignore  README.md  requirements.txt
VidyaSetu-MVP/: .env.example  .gitignore  (+8 more)
cdisc-north-engine/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
cdisc-north-engine/data/seeds/: sample_north_india_leads.csv
cdisc-north-engine/docs/: agent-documentation.md  architecture.md
cdisc-north-engine/src/cdisc/: __init__.py  __main__.py  cli.py  config.py  db.py
cdisc-north-engine/src/cdisc/dashboard/: app.py
cdisc-north-engine/src/cdisc/messaging/: generator.py  templates.py
cdisc-north-engine/src/cdisc/outreach/: email_sender.py  linkedin_queue.py  whatsapp.py
cdisc-north-engine/src/cdisc/scoring/: fit_scorer.py  geo.py  scorer.py  segment.py
cdisc-north-engine/src/cdisc/sources/: csv_loader.py  google_places.py
cdisc-north-engine/tests/: test_scorer.py
cdisc-north-engine/workflows/: run_demo.py
(+209 files in other folders)
